--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
   },
   "scripts": {
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
-  }
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_1de2942183ff1bd"
+  },
+  "name": "",
+  "version": "",
+  "readme": "ERROR: No README data found!",
+  "_id": "@"
 }
